# api_rest_estudiantes

./: LICENSE  README.md  main.py  pyproject.toml  students.db
database/: database.py
models/: student.py
routes/: students.py
templates/: index.html
templates/partials/: students_table.html
